# pharmGKB-filter

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
pharmgkb_extraction/: lung65_chemo.py
pharmgkb_extraction/config/: custom_class.json
pharmgkb_filter/: lung65_chemo.py  vcf_to_dict.py
pharmgkb_filter/config/: custom_class.json
resource/: pharmGKB_rs_id_mapping_dbSNP156_template.vcf.gz.tbi
tests/: pharmGKB_rs_id_mapping_dbSNP156_template.vcf.gz.tbi  test.py  vcf_to_dict.py
