[tool.poetry]
name = "pharmgkb-extraction"
version = "0.1.0"
description = ""
authors = ["Liyang-Zhang <1219187848@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
typer = "^0.9.0"
rich = "^13.6.0"
numpy = "^1.26.2"
pandas = "^2.1.3"
polars = "^0.19.13"
openpyxl = "^3.1.2"
lxml = "^4.9.3"
deprecation = "^2.1.0"
pydantic = "^2.4.2"
pysam = "^0.22.0"
intervaltree = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
flake8 = "^6.1.0"
isort = "^5.12.0"
black = "^23.11.0"
prettier = "^0.0.7"
pre-commit = "^3.5.0"
jupyterlab = "^4.0.8"
jupyterlab-lsp = "^5.0.0"
python-lsp-server = "^1.9.0"
jupyterlab-vim = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["*/__version__.py"]
